# BiasBenchmarkAnonymous

./: .gitignore  README.md  auto_check.sh  auto_evaluate.sh  auto_generate.sh  auto_monitor.sh  auto_stop_generate.sh  model_config_template.json  models.txt  pyproject.toml
bias_assessment/: evidence_entity.py  evidence_ssr.py  evidence_ssr_agent.py  evidence_ssr_cot_agent.py  rct_bias_assessment.py  rct_bias_assessment_copy.py
bias_assessment/prompts/: 1randomization_process_question.txt  2intended_intervention.txt  3missing_outcome.txt  4measurement_of_the_outcome.txt  5selection_of_the_reported_result.txt  overall_risk_assessment.txt  overall_risk_assessment_cot.txt  rct_domain_signal_normal.txt  rct_domain_signal_normal_cot.txt  ssr_confidence_grading.txt  ssr_dvr_reflection.txt  ssr_evidence_extraction.txt  ssr_evidence_extraction_cot.txt  ssr_evidence_extraction_cot_agent.txt  ssr_evidence_extraction_direct.txt  ssr_evidence_extraction_origin.txt
data/: ssr_dataset_merged.json
evaluate/: check_evidence_direct.py  check_evidence_result.py  check_generate_bias_result.py  evaluate_aggregation_consistency.py  evaluate_atomic_consistency.py  evaluate_domain_consistency.py  evaluate_evidence_result.py  evaluate_evidence_result_direct.py  evaluate_rct.py  evaluate_three_consistency.py  generate_evidence.py  generate_rct_bias_result.py
utils/: openai_llm.py
